aks/ingress/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: randeerdil
  name: randeerdil
  namespace: aks-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: aks.lala-1992.xyz
    http:
      paths:
      - backend:
          service:
            name: randeerdil-deployment
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - aks.lala-1992.xyz
    secretName: webapprouting-com-tls
